Add contact form

--- a/index.html
+++ b/index.html
@@ -82,3 +82,4 @@
     </div>
 </body>
 </html>
+<form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">Email: <input name="email"><button>Free Trial</button></form>
