--- a/index.html
+++ b/index.html
@@ -81,12 +81,7 @@
         <p>© 2024 Pharma Transport Power Monitor | Built on Ubuntu + pandapower</p>
     </div>
 <div style="text-align: center; padding: 60px 20px; background: #f8f9fa; margin: 40px 0;">
-<h2 style="color: #28a745; font-size: 32px;">🚀 Ready to Start?</h2>
-<p style="font-size: 18px; margin: 20px 0;">30-Day FREE Trial - No credit card required</p>
-<form action="https://github.com/bdt17/PharmaTransportWebapp/discussions/new?category=trial" method="POST" style="max-width: 500px; margin: 0 auto;">
-<input type="email" name="email" placeholder="your@pharma.com" required style="padding: 15px; width: 100%; margin: 10px 0; box-sizing: border-box; font-size: 16px; border: 1px solid #ddd; border-radius: 5px;">
-<textarea name="company" placeholder="Company name (optional)" style="padding: 15px; width: 100%; margin: 10px 0; box-sizing: border-box; font-size: 16px; border: 1px solid #ddd; border-radius: 5px; height: 80px;"></textarea>
-<button type="submit" style="background: #28a745; color: white; padding: 18px 40px; border: none; border-radius: 8px; font-size: 18px; width: 100%; cursor: pointer;">Start FREE Trial →</button>
+<button type="submit" style="background: #28a745; color: white; padding: 18px 40px; border: none; border-radius: 8px; font-size: 18px; width: 100%; cursor: pointer;">Email Trial Request</button>
 </form>
 </div>
 </body>
